tests/basic/006_fun_assert_false.pan.out
tests/basic/006_fun_assert_false.pan:3:1-4: error: unable to verify type of f01
tests/basic/006_fun_assert_false.pan:8:1-4: error: unable to verify type of f11
tests/basic/006_fun_assert_false.pan:11:1-4: error: unable to verify type of f13
tests/basic/006_fun_assert_false.pan:14:1-4: error: unable to verify type of f15
tests/basic/006_fun_assert_false.pan:17:1-4: error: unable to verify type of f17
tests/basic/006_fun_assert_false.pan:22:1-4: error: unable to verify type of f21
tests/basic/006_fun_assert_false.pan:25:1-4: error: unable to verify type of f23
tests/basic/006_fun_assert_false.pan:28:1-4: error: unable to verify type of f25
tests/basic/006_fun_assert_false.pan:31:1-4: error: unable to verify type of f27
tests/basic/006_fun_assert_false.pan:36:1-4: error: unable to verify type of f31
tests/basic/006_fun_assert_false.pan:39:1-4: error: unable to verify type of f33
tests/basic/006_fun_assert_false.pan:42:1-4: error: unable to verify type of f35
tests/basic/006_fun_assert_false.pan:45:1-4: error: unable to verify type of f37
tests/basic/006_fun_assert_false.pan:50:1-4: error: unable to verify type of f41
tests/basic/006_fun_assert_false.pan:53:1-4: error: unable to verify type of f43
tests/basic/006_fun_assert_false.pan:56:1-4: error: unable to verify type of f45
tests/basic/006_fun_assert_false.pan:59:1-4: error: unable to verify type of f47
tests/basic/006_fun_assert_false.pan:64:1-4: error: unable to verify type of f51
tests/basic/006_fun_assert_false.pan:67:1-4: error: unable to verify type of f53
tests/basic/006_fun_assert_false.pan:70:1-4: error: unable to verify type of f55
tests/basic/006_fun_assert_false.pan:73:1-4: error: unable to verify type of f57
tests/basic/006_fun_assert_false.pan:78:1-4: error: unable to verify type of f61
tests/basic/006_fun_assert_false.pan:81:1-4: error: unable to verify type of f63
tests/basic/006_fun_assert_false.pan:84:1-4: error: unable to verify type of f65
tests/basic/006_fun_assert_false.pan:87:1-4: error: unable to verify type of f67